# mapgen-python

./: .mypy.ini  LICENSE  README.md  pyproject.toml
app/: app.py
examples/full_map/: configuration.json  latitude.lua  map.npz  precipitation.lua  temperature.lua  view_temperature.lua  views.json  views.lua
mapgen/: main.py  models.py  utils.py
mapgen/data/: compressed_npz_map_loader.py  compressed_npz_map_saver.py  console_map_viewer.py  errors.py  file_map_configuration_loader.py  file_view_configuration_set_loader.py  layer_configuration_loader.py  map_configuration_loader.py  map_definition_loader.py  map_loader.py  map_saver.py  models.py  view_configuration_set_loader.py
mapgen/data/layer_generators/: __init__.py  frequency_filtered_noise_layer_generator.py  get_tile.lua  layer_generator.py  lua_layer_generator.py  native_layer_generator.py  test_layer_generator.py
mapgen/use_cases/: exceptions.py  generate_map.py  map_creator.py  map_creator_process.py  map_generator.py  map_viewer.py  shared_memory_map_accessor.py
scripts/: build.sh
test/: run_lua_tests.py
test/app/: test_create_map.py  test_list_views.py  test_view_map.py
test/data/: test_console_map_viewer.py  test_file_view_configuration_set_loader.py  test_layer_configuration_loader.py  test_map_configuration_loader.py  test_map_definition_loader.py  test_models.py
test/integration/: test_save_and_load_map.py
test/use_cases/: test_generate_map.py  test_map_creator.py  test_map_creator_process.lua  test_map_creator_process.py  test_map_generator.py  test_shared_memory_map_accessor.py
(+33 files in other folders)
